# growlithe

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pydocstyle  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  visualize.py
analysis/: analyze_function.py
cli/: analyze.py  config.py
common/: app_config.py  file_utils.py  logger.py  tasks_config.py  utils.py
coverage_log/: high-level-flow.csv
graph/: generater.py
graph-generation/: README.md  allowFilters.py  cloudformation_helper.py  filtersConfig.json  graph.py  main.py  node.py  policy.py  policyLib.py  policy_interface.py  requirements.txt  sarif_extractor.py  step_function_helper.py  utility.py
graph-visualization/: boto3_helper.py  graph.py  main.py  node.py  nodes.py  sarif_extractor.py  step_function_helper.py  utility.py
growlithe/: config.py
high-level-flow/: codeql-pack.lock.yml  main.py
microbenchmarks/: README.md  analyze.py  generate_app.py  growlithe_config.yaml  plot.py  run_growlithe.py  run_microbenchmark.py  sens-remote.py
output/: ImageProcessingFilter.sarif  ImageProcessingFlip.sarif  ImageProcessingGetInput.sarif  ImageProcessingGrayScale.sarif  ImageProcessingResize.sarif  ImageProcessingRotate.sarif  README.md  analyze.py  graph.py
scripts/: run_static_analysis.py  setup_codeql.sh
src/: Sinks.qll  Sources.qll  TaintTracker.qll  benchmark_config.py  dataFlows.ql  flowPaths.ql  growlithe.py  logger.py  main.py  sarif_extractor.py  utility.py
static-analysis/: README.md  Sources.qll  dataFlows.ql  (+4 more)
(+1304 files in other folders)
